<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textSize="35sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/sf_medium"
            android:textStyle="bold"
            android:textColor="@color/blackish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="25dp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/name"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="25dp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/set_username"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/register_textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/set_password"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btnRegister"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/register"
            android:backgroundTint="@color/bright_blue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:elevation="4dp"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            tools:targetApi="lollipop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/after_clicking_the_register_button_a_verification_link_will_be_sent_to_your_email_address"
            android:textColor="@color/bluish_grey"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/register_txtBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_click_here_to_login"
            android:textSize="15sp"
            android:textColor="@color/royal_blue"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</LinearLayout>