<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="35sp"
            android:includeFontPadding="false"
            android:fontFamily="@font/sf_medium"
            android:textStyle="bold"
            android:textColor="@color/blackish"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textInputLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="40dp"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:elevation="4dp"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true"
            tools:targetApi="lollipop">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:fontFamily="@font/sf_medium"
                android:includeFontPadding="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btnLogin"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/login"
            android:backgroundTint="@color/bright_blue"
            android:textAllCaps="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/sf_medium"
            android:elevation="4dp"
            android:includeFontPadding="false"
            tools:targetApi="lollipop" />

        <TextView
            android:id="@+id/login_txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/bluish_grey"
            android:textSize="15sp"
            android:gravity="center"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/login_txtBackToRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_to_flingg_click_here_to_register"
            android:textSize="15sp"
            android:textColor="@color/royal_blue"
            android:fontFamily="@font/sf_medium"
            android:includeFontPadding="false"
            android:gravity="center"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

</LinearLayout>