<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitish"
    tools:context=".ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/profile_appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bright_blue"
            app:titleTextColor="@color/white"
            style="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_appBarLayout"
        android:padding="8dp"
        android:background="@color/whitish">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardCornerRadius="8dp"
            tools:targetApi="lollipop">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_profileImage"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    app:civ_border_color="@color/bluish_grey"
                    app:civ_border_width="0.5dp"
                    android:src="@drawable/user"/>

                <ImageButton
                    android:id="@+id/profile_btnChangePic"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="210dp"
                    android:layout_marginStart="210dp"
                    android:layout_marginTop="120dp"
                    android:elevation="4dp"
                    style="@style/AppTheme.RoundedCornerMaterialButton"
                    android:src="@drawable/ic_camera_vector"
                    tools:targetApi="lollipop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@id/profile_profileImage"
                    android:paddingLeft="14dp"
                    android:paddingRight="14dp"
                    android:layout_marginTop="30dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="17sp"
                        android:textColor="@color/blackish"
                        android:layout_marginTop="2dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textSize="15sp"
                        android:layout_marginTop="12dp"/>

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dots"
                        android:textSize="17sp"
                        android:textColor="@color/blackish"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="40dp"/>

                </LinearLayout>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </RelativeLayout>

</RelativeLayout>